--- a/app/src/main/res/drawable/indicator_selected.xml
+++ b/app/src/main/res/drawable/indicator_selected.xml
@@ -5,7 +5,7 @@
             android:shape="line">
             <stroke
                 android:width="2sp"
-                android:color="@color/color_tab" />
+                android:color="@color/red" />
             <size android:height="0.5sp" />
         </shape>
     </item>
