--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -18,7 +18,7 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="256dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/white_transparent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
