--- a/app/src/main/res/layout/item_advertise.xml
+++ b/app/src/main/res/layout/item_advertise.xml
@@ -1,15 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/ic_launcher"
+        android:layout_height="72sp"
         android:layout_gravity="center"
-        android:scaleType="fitXY"/>
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"
+        android:visibility="gone" />
+
+
+
+        <RelativeLayout
+            android:id="@+id/rl_advertise"
+            android:layout_width="match_parent"
+            android:background="@drawable/round_rect"
+            android:layout_height="74sp"
+            android:layout_gravity="center"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/img_icon"
+                android:layout_width="72sp"
+                android:layout_height="72sp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="8sp"
+                android:scaleType="fitXY"
+                android:src="@drawable/holder_error" />
+
+            <LinearLayout
+                android:id="@+id/ll_descrip_ads"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/img_icon"
+                android:orientation="vertical"
+                android:paddingStart="8sp"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:text="@string/title_max_length_350"
+                    android:textColor="@color/gray" />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:text="@string/ho_tro_tim_truyen"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+        </RelativeLayout>
 </FrameLayout>
