--- a/app/src/main/res/layout/fragment_home_view.xml
+++ b/app/src/main/res/layout/fragment_home_view.xml
@@ -42,7 +42,7 @@
                     <com.google.android.material.tabs.TabLayout
                         android:id="@+id/tab_indicator_line_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="22sp"
                         android:layout_below="@id/viewPager"
                         android:layout_alignParentBottom="true"
                         app:tabBackground="@drawable/indicator_tab_selector"
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="6dp"
-                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
+                        android:drawableEnd="@drawable/ic_arrow_forward"
                         android:fontFamily="@font/comfortaa_regular"
                         android:text="@string/title_today"
                         android:textSize="16sp"
@@ -119,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="6dp"
-                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
+                        android:drawableEnd="@drawable/ic_arrow_forward"
                         android:fontFamily="@font/comfortaa_regular"
                         android:text="@string/truyen_moi"
                         android:textSize="16sp"
@@ -158,7 +158,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
-                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
+                        android:drawableEnd="@drawable/ic_arrow_forward"
                         android:fontFamily="@font/comfortaa_regular"
                         android:text="@string/truyen_xem_nhieu"
                         android:textSize="16sp"
@@ -268,7 +268,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="6dp"
-                        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
+                        android:drawableEnd="@drawable/ic_arrow_forward"
                         android:fontFamily="@font/comfortaa_regular"
                         android:text="@string/truyen_hoan_thanh"
                         android:textSize="16sp"
