--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/silver_transparent"
+    android:background="@color/colorPrimary"
     android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:layout_height="match_parent"
+        android:background="@color/silver_transparent"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
-            android:background="@color/white_transparent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
@@ -27,16 +27,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 app:layout_collapseMode="parallax">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginBottom="24dp"
-                    app:cardCornerRadius="50dp">
+                    android:layout_width="110dp"
+                    android:layout_height="160sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="8sp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="3sp">
 
                     <ImageView
                         android:id="@+id/img_comic"
@@ -51,8 +52,120 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"></LinearLayout>
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/title_chapter"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tv_other_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4sp"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:minLines="1"
+                        android:text="@string/title_chapter" />
+
+                    <TextView
+                        android:id="@+id/tv_author"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4sp"
+                        android:gravity="center"
+                        android:text="@string/title_chapter" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="16sp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:weightSum="3">
+
+                        <TextView
+                            android:id="@+id/tv_star_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|center_horizontal"
+                            android:layout_weight="1"
+                            android:contentDescription="Ratting"
+                            android:drawableTop="@drawable/ic_star_half"
+                            android:drawableTint="@color/white"
+                            android:gravity="center"
+                            android:text="Ratting"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_quantity_views"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|center_horizontal"
+                            android:layout_weight="1"
+                            android:contentDescription="Views"
+                            android:drawableTop="@drawable/ic_red_eye"
+                            android:drawableTint="@color/white"
+                            android:gravity="center_horizontal"
+                            android:text="View" />
+
+                        <TextView
+                            android:id="@+id/tv_quantity_like"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:contentDescription="Like"
+                            android:drawableTop="@drawable/ic_like"
+                            android:drawableTint="@color/white"
+                            android:gravity="center_horizontal"
+                            android:text="Like" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1sp"
+                            android:layout_marginTop="16sp"
+                            android:background="@color/silver" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8sp"
+                            android:drawableEnd="@drawable/ic_arrow_forward"
+                            android:drawableTint="@color/white"
+                            android:text="@string/tom_tat_truyen"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/tv_summary"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8sp"
+                            android:lines="5"
+                            android:maxLines="6"
+                            android:minLines="4"
+                            android:textColor="@color/black" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
+
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -156,9 +269,9 @@
 
         <ListView
             android:id="@+id/list_view_comments"
-            android:clickable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:visibility="gone" />
 
 
