--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".inforView.DetailActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="120sp"
+            android:layout_height="160sp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            app:cardCornerRadius="5sp"
+            app:cardElevation="4sp">
+
+            <ImageView
+                android:id="@+id/img_icon_comic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tv_summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
