--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -36,8 +36,8 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:layout_marginBottom="8sp"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="3sp">
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="4sp">
 
                     <ImageView
                         android:id="@+id/img_comic"
@@ -45,7 +45,6 @@
                         android:layout_height="match_parent"
                         android:fitsSystemWindows="true"
                         android:scaleType="fitXY"
-                        android:src="@drawable/holder_error"
                         app:layout_collapseMode="parallax" />
                 </androidx.cardview.widget.CardView>
 
@@ -61,6 +60,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textStyle="bold"
                         android:text="@string/title_chapter"
                         android:textSize="18sp" />
 
@@ -98,8 +98,7 @@
                             android:layout_gravity="center|center_horizontal"
                             android:layout_weight="1"
                             android:contentDescription="Ratting"
-                            android:drawableTop="@drawable/ic_star_half"
-                            android:drawableTint="@color/white"
+                            android:drawableTop="@drawable/ic_star_border"
                             android:gravity="center"
                             android:text="Ratting"
                             android:textStyle="bold" />
@@ -111,7 +110,7 @@
                             android:layout_gravity="center|center_horizontal"
                             android:layout_weight="1"
                             android:contentDescription="Views"
-                            android:drawableTop="@drawable/ic_red_eye"
+                            android:drawableTop="@drawable/ic_white_eye"
                             android:drawableTint="@color/white"
                             android:gravity="center_horizontal"
                             android:text="View" />
@@ -123,8 +122,7 @@
                             android:layout_gravity="center"
                             android:layout_weight="1"
                             android:contentDescription="Like"
-                            android:drawableTop="@drawable/ic_like"
-                            android:drawableTint="@color/white"
+                            android:drawableTop="@drawable/ic_un_like"
                             android:gravity="center_horizontal"
                             android:text="Like" />
 
@@ -139,9 +137,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="1sp"
                             android:layout_marginTop="16sp"
-                            android:background="@color/silver" />
+                            android:background="@color/white" />
 
                         <TextView
+                            android:id="@+id/tv_title_summary"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8sp"
