--- a/app/src/main/res/layout/activity_infor.xml
+++ b/app/src/main/res/layout/activity_infor.xml
@@ -51,18 +51,20 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                    android:orientation="vertical">
+                    android:layout_gravity="center"
+                    android:layout_marginStart="0sp"
+                    android:layout_marginEnd="0sp"
+                    android:orientation="vertical"
+                    android:paddingStart="16sp"
+                    android:paddingEnd="16sp">
 
                     <TextView
                         android:id="@+id/tv_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textStyle="bold"
-                        android:text="@string/title_chapter"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_other_name"
@@ -71,16 +73,14 @@
                         android:layout_marginTop="4sp"
                         android:gravity="center"
                         android:maxLines="1"
-                        android:minLines="1"
-                        android:text="@string/title_chapter" />
+                        android:minLines="1" />
 
                     <TextView
                         android:id="@+id/tv_author"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4sp"
-                        android:gravity="center"
-                        android:text="@string/title_chapter" />
+                        android:gravity="center" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -145,7 +145,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8sp"
                             android:drawableEnd="@drawable/ic_arrow_forward"
+                            android:drawablePadding="8sp"
                             android:drawableTint="@color/white"
+                            android:singleLine="true"
                             android:text="@string/tom_tat_truyen"
                             android:textColor="@color/black"
                             android:textSize="18sp" />
@@ -179,8 +181,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="45sp"
                 android:layout_gravity="bottom"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
                 android:background="@drawable/border_tab"
                 android:orientation="horizontal"
                 android:weightSum="2">
@@ -193,6 +195,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_tab_chapter"
                         android:layout_width="match_parent"
                         android:layout_height="44sp"
                         android:layout_gravity="center_vertical"
@@ -206,7 +209,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1sp"
                         android:background="@color/color_tab"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -217,6 +220,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_tab_comment"
                         android:layout_width="match_parent"
                         android:layout_height="44sp"
                         android:layout_gravity="center_vertical"
@@ -250,31 +254,60 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_info_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/white"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ListView
-            android:id="@+id/list_view_chapters"
+        <LinearLayout
+            android:id="@+id/ll_info_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/ll_comment"
+            android:background="@color/white"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <ListView
+                android:id="@+id/list_view_chapters"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <ListView
+                android:id="@+id/list_view_comments"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="false"
+                android:visibility="visible" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_alignParentTop="true"
+            android:background="@color/silver"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
-        <ListView
-            android:id="@+id/list_view_comments"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:visibility="gone" />
-
-
-    </LinearLayout>
-
-
+            <EditText
+                android:id="@+id/edt_cmt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8sp"
+                android:background="@drawable/search_view_corners"
+                android:gravity="left|center"
+                android:hint="@string/comment_some_text"
+                android:imeActionLabel="Send"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:maxLength="500"
+                android:maxLines="5"
+                android:padding="6sp" />
+        </LinearLayout>
+    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
