--- a/app/src/main/res/menu/info_menu.xml
+++ b/app/src/main/res/menu/info_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/menu_main_notifi"
         android:icon="@drawable/ic_notifications_off"
         app:showAsAction="always"
+        android:visible="false"
         android:title="@string/khong_nhan_thong_bao" />
     <item
         android:id="@+id/menu_main_subcrise"
