--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -23,8 +23,8 @@
         android:layout_alignParentEnd="true"
         android:textSize="16sp"
         android:layout_gravity="center|center_vertical"
-        android:drawableEnd="@drawable/ic_google"
-        android:drawablePadding="4dp"
+        android:drawableEnd="@drawable/ic_carrot"
+        android:drawablePadding="8dp"
         android:visibility="gone"
         android:fontFamily="@font/comfortaa_regular"
         android:textColor="@color/purple" />
